fix checkbox alignment on account settings page
flag=none
refs FOO-5590

test plan:
- visit accounts/<accountId>/settings
- check boxes should be aligned with their label

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/383514
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Maya Tyner <maya.tyner@instructure.com>
Product-Review: Adrián Grúber <adrian.gruber@instructure.com>

--- a/app/stylesheets/pages/account_settings/_account_settings.scss
+++ b/app/stylesheets/pages/account_settings/_account_settings.scss
@@ -142,9 +142,6 @@
     white-space: nowrap;
   }
   .formtable {
-    input, select, td {
-      vertical-align: baseline;
-    }
     p {
       line-height: 100%;
     }
